.gitignore: Ignore only /built/gather_stats.js.
/built/status_chart.js will be checked in.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 .vscode/
 
 # Ignore the TypeScript compiler's output.
-/built/
+/built/gather_stats.js
 
 # Ignore installed packages.
 /node_modules/
