Split tsconfig.json.
This extracts the compilerOptions to tsconfig.universal.json.

Now, tsconfig.json applies to only src/gather_stats.ts.

tsconfig.status_chart.json is for src/status_chart.ts
and adds the `noEmit` option, because esbuild will
perform codegen after tsc performs type checking.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,6 @@
 {
-    "compilerOptions": {
-        "module": "CommonJS",
-        "outDir": "./built",
-        "target": "ES2020",
-        "allowUnreachableCode": false,
-        "allowUnusedLabels": false,
-        "esModuleInterop": true,
-        "exactOptionalPropertyTypes": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-    },
-    "include": [
-        "./src/**/*"
+    "extends": "./tsconfig.universal.json",
+    "files": [
+        "./src/gather_stats.ts"
     ]
 }
