Split tsconfig.json.
This extracts the compilerOptions to tsconfig.universal.json.

Now, tsconfig.json applies to only src/gather_stats.ts.

tsconfig.status_chart.json is for src/status_chart.ts
and adds the `noEmit` option, because esbuild will
perform codegen after tsc performs type checking.

Both scripts want `"moduleResolution": "node"`, the modern strategy:
https://www.typescriptlang.org/docs/handbook/module-resolution.html#module-resolution-strategies

For codegen, src/gather_stats.ts still wants `"module": "CommonJS"`
(although it could be upgraded in the future).

src/status_chart.ts wants `"module": "ES2020"` (technically,
this option doesn't matter because esbuild performs codegen,
but I thought it would be confusing to omit).

--- a/tsconfig.status_chart.json
+++ b/tsconfig.status_chart.json
@@ -1,9 +1,10 @@
 {
     "extends": "./tsconfig.universal.json",
     "compilerOptions": {
-        "module": "CommonJS",
+        "module": "ES2020",
+        "noEmit": true,
     },
     "files": [
-        "./src/gather_stats.ts",
+        "./src/status_chart.ts",
     ],
 }
