Split tsconfig.json.
This extracts the compilerOptions to tsconfig.universal.json.

Now, src_gather/tsconfig.json is for gather_stats.ts in that directory.

src/tsconfig.json is for status_chart.ts in that directory
and adds the `noEmit` option, because esbuild will
perform codegen after tsc performs type checking.

Both scripts want `"moduleResolution": "node"`, the modern strategy:
https://www.typescriptlang.org/docs/handbook/module-resolution.html#module-resolution-strategies

For codegen, gather_stats.ts still wants `"module": "CommonJS"`
(although it could be upgraded in the future).

status_chart.ts wants `"module": "ES2020"` (technically,
this option doesn't matter because esbuild performs codegen,
but I thought it would be confusing to omit).

--- a/tsconfig.universal.json
+++ b/tsconfig.universal.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "module": "CommonJS",
+        "moduleResolution": "node",
         "outDir": "./built",
         "target": "ES2020",
         "allowUnreachableCode": false,
@@ -10,7 +10,4 @@
         "strict": true,
         "forceConsistentCasingInFileNames": true,
     },
-    "include": [
-        "./src/**/*"
-    ]
 }
