--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "@types/luxon": "^2.0.9",
     "@types/node": "^17.0.17",
     "@types/yargs": "^17.0.8",
+    "chart.js": "^3.7.1",
+    "chartjs-adapter-date-fns": "^2.0.0",
     "cli-progress": "^3.10.0",
+    "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
+    "esbuild": "^0.14.21",
     "luxon": "^2.3.0",
     "typescript": "^4.5.5",
     "yargs": "^17.3.1"
